Sun Dec 28 01:35:35 2003  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::find_body):
	  Sometimes the Ruby source aliases two otherwise
	  unrelated methods (for example Kernel#object_id and
	  Kernel#hash are both the same C function). Provide a
	  facility to allow the methods to be documented
	  separately.

Sun Dec 28 01:05:31 2003  Dave Thomas  <dave@pragprog.com>

	* marshal.c, signal.c: RDoc collemts added by Elliott Hughes

Sun Dec 28 00:46:25 2003  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_c.rb (RDoc::C_Parser::find_class_comment):
		  Some Ruby source uses lower-case class names for the
		  Init_Xxx C function name.

Sat Dec 27 23:41:46 2003  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: fix "test: too many arguments" error.

Sat Dec 27 15:32:40 2003  Dave Thomas  <dave@wireless_3.local.thomases.com>

	* time.c: Add RDoc comments for Time class.

Sat Dec 27 15:07:26 2003  Dave Thomas  <dave@pragprog.com>

	* object.c: Add RDoc comments for Symbol class.

Sat Dec 27 14:39:53 2003  Dave Thomas  <dave@pragprog.com>

	* numeric.c (Init_Numeric): Add RDoc comments.

Sat Dec 27 00:44:00 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (next_argv): warn always for stdin on inplace edit mode.

	* io.c (read_all): need to check string value.

	* io.c (argf_read): allow ARGF.read(nil).  [ruby-dev:22433]

Fri Dec 26 23:02:09 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_backquote): need not to check nil result.
	  [ruby-core:02078]

	* io.c (rb_io_getline): should return nil when read_all gives
	  empty string, even when nil rs is specified. [ruby-core:02077]

Fri Dec 26 18:33:54 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if getcontext and setcontext are available.

	* eval.c: use presence of getcontext/setcontext.

Fri Dec 26 16:40:53 2003  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (PathnameTest#test_plus): add 2 assertions.
